<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.medhost.cache</groupId>
  <artifactId>CacheBenchMark</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>CacheBenchMark</name>
  <url>http://www.medhost.com/</url>
  <description>Cache BenchMarking for Configuration Manager implementation</description>

  <issueManagement>
    <system>JIRA</system>
    <url>https://jira.medhost.com:8443/secure/Dashboard.jspa</url>
  </issueManagement>

  <developers>
    <developer>
      <id>Pandian</id>
      <name>Pandian Velayutham</name>
      <email>pandian.velayutham@medhost.com</email>
      <roles>
        <role>Architect</role>
      </roles>
      <organization>Medhost</organization>
      <timezone>-6</timezone>
    </developer>
  </developers>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <repositories>
    <repository>
      <id>hmsiterop.internal</id>
      <url>http://10.1.4.87:8998/archiva/repository/internal/</url>
      <releases>
        <enabled>true</enabled>
      </releases>
    </repository>
    <repository>
      <id>hmsiterop.snapshots</id>
      <url>http://10.1.4.87:8998/archiva/repository/snapshots/</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>


  <distributionManagement>
    <site>
      <id>localtomcat</id>
      <url>scp://localhost/home/pandian/bin/tomcat/webapps/docs/projects/cachebenchmark/</url>
    </site>
  </distributionManagement>

  <dependencies>

    <!-- postgresql -->
    <dependency>
      <groupId>postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <version>8.3-606.jdbc4</version>
    </dependency>


    <!-- ehcahce -->
    <dependency>
      <groupId>net.sf.ehcache</groupId>
      <artifactId>ehcache</artifactId>
      <version>2.9.1</version>
    </dependency>

    <!-- log4j over slf4j -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-log4j12</artifactId>
      <version>1.7.12</version>
    </dependency>


    <!-- Jmeter dependent jars -->
    <dependency>
      <groupId>org.apache.jmeter</groupId>
      <artifactId>ApacheJMeter_java</artifactId>
      <version>2.10</version>
    </dependency>

    <!-- infinispan -->
    <dependency>
      <groupId>org.infinispan</groupId>
      <artifactId>infinispan-core</artifactId>
      <version>7.1.1.Final</version>
    </dependency>



    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
    </dependency>

  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.3.2</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>

      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <configuration>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
        </configuration>
      </plugin>

      <!-- unsupported scp protocol, so need this plugin for maven 3 -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-site-plugin</artifactId>
        <version>3.4</version>
        <dependencies>
          <dependency><!-- add support for ssh/scp -->
            <groupId>org.apache.maven.wagon</groupId>
            <artifactId>wagon-ssh</artifactId>
            <version>1.0</version>
          </dependency>
        </dependencies>
      </plugin>


      <!-- project report -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-site-plugin</artifactId>
        <version>3.2</version>
        <configuration>
          <reportPlugins>
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-project-info-reports-plugin</artifactId>
              <version>2.2</version>
              <reports>
                <report>index</report>
                <report>project-team</report>
                <report>license</report>
                <report>mailing-list</report>
                <report>dependencies</report>
                <report>dependency-convergence</report>
                <report>plugin-management</report>
                <report>cim</report>
                <report>issue-tracking</report>
                <report>scm</report>
                <report>summary</report>
              </reports>
            </plugin>

            <!-- unit test report -->
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-surefire-report-plugin</artifactId>
              <version>2.18.1</version>
            </plugin>

            <!-- java doc -->
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-javadoc-plugin</artifactId>
              <version>2.10.3</version>
            </plugin>

            <!-- code style -->
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-checkstyle-plugin</artifactId>
              <version>2.15</version>
              <configuration>
                <!-- Adopt config location to your needs, or remove configuration entry completly to use default version.
                <configLocation>http://stud.hs-heilbronn.de/~nischmid/development/checkstyle-config.xml</configLocation>
                -->
              </configuration>
            </plugin>

            <!-- find bugs -->

            <plugin>
              <groupId>org.codehaus.mojo</groupId>
              <artifactId>findbugs-maven-plugin</artifactId>
              <version>3.0.1</version>
              <configuration>
                <argLine>-Xmx256m</argLine>
                <argLine>-XX:MaxPermSize=256m</argLine>
              </configuration>
            </plugin>

            <!-- jdepend -->
            <plugin>
              <groupId>org.codehaus.mojo</groupId>
              <artifactId>jdepend-maven-plugin</artifactId>
              <version>2.0</version>
            </plugin>

            <!-- test / code coverage -->
            <plugin>
              <groupId>org.codehaus.mojo</groupId>
              <artifactId>cobertura-maven-plugin</artifactId>
              <version>2.7</version>
            </plugin>

            <!-- To do -->
            <plugin>
              <groupId>org.codehaus.mojo</groupId>
              <artifactId>taglist-maven-plugin</artifactId>
              <version>2.4</version>
            </plugin>
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-jxr-plugin</artifactId>
              <version>2.5</version>
            </plugin>


            <!-- pmd -->
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-pmd-plugin</artifactId>
              <version>2.5</version>
              <configuration>
                <linkXref>true</linkXref>
                <minimumTokens>100</minimumTokens>
                <minimumPriority>3</minimumPriority>
                <!-- Change minimum priority to see more or less messages -->
                <targetJdk>1.7</targetJdk>
              </configuration>
            </plugin>
          </reportPlugins>

        </configuration>
      </plugin>


    </plugins>
  </build>

</project>
